添加 rabbitmq 的学习